# clean_axum_demo

./: .env  .env.examples  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-026692dfac2aacd7058a477c1f5f82f043a748ff856c72d535d6028e68927012.json  query-12d3a6398cb4bb51a4e30afb31b6591f1f15f239a92cc6638cf953f527e7bdd2.json  query-1505133af6755eb6bee21be535a9dc86274f8d128c03b582be7b81cb98a9977f.json  query-181567d0765d202847ebfee92e1df4688c770379d5bfbe32d3570088a4e7bd9f.json  query-1b9fb6639086e64da32a19568b80c55b56aba4f5d92ef8f84ee03e7c102e5c13.json  query-21c1f0df15611de79a7488610b302b765a2f99f6b71320fd986de94621c1f926.json  query-23528331220c66eeb53f6f6110b04e6631ff01e79e6bf0b65d38b52734a80193.json  query-2678844800d8372fe70e3fa858d42a9e4c6bf1bc1426e38a5219f8f51adeeaeb.json  query-2a423ce9516f28baec89cc0609f43323c1c12fdd69ef98a1f392d62131c7dccf.json  query-440f3b1d1ab45b2ed72616ec0b0b896cd31a3eca14172929fcab6284b2ddcd25.json  query-454309bccde82bc70f8accabdf3eebdb22092fa32826267f19dbe52d9244c390.json  query-4715f9c2dd558d34aa4bebf4d2422ced72fa81b4974ed91e21520cdc912a7917.json  query-494466880c474ec747e285e9f76dc97b8fe7ecba5e0172c7a933fd278316161f.json  query-646bd61d6e99381660f7696a6210eaa2c4bd653622e37fd9ee1409f9c72266bb.json  query-667179094a09bfe50ce02ae49560529984e7ead18635f5b85a85efb4f3859940.json  query-74ee586cb1cdc2c8c249239fbf421e90b755bad28f20fbcc8f4b69e9ffd95e10.json  query-765a6527d90b1ec28f777390b8a8373c017d96e30c2703673d606272e7025d51.json  query-87b0390caa154ae90c3f14349fb7ad46784109f20935eef3232b47cd83612662.json  query-895d0a52b9e718ff8060e35d8c1ce1a3320f74c0a267b731abb25f2764f96d2f.json  query-8c13f7b2acbfef7fc4c20d694f36b8a4c6ffe55459ff75a453c1dd35aafcd50c.json  query-9780f51d00fdc7f4b2051dd39dffc1db0b69b509186487a3d4abc2538d05531d.json  query-a024dd15e57a9e53c2fffa9b2fe180618680fe438c450640f828f19bc8758730.json  query-af79a9a6cf10bbf44713a7f7c23170d564776cbba174d824b60baec544205017.json  (+5 more)
(+159 files in other folders)
